[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv_emu_rust = {path = "../"}
wasm-bindgen = "0.2.55"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "riscv_emu_rust_wasm"
path = "src/lib.rs"
crate-type = ["cdylib"]